--- a/WorkoutTracker/WorkoutTracker/WorkoutTracker/Components/App.razor
+++ b/WorkoutTracker/WorkoutTracker/WorkoutTracker/Components/App.razor
@@ -2,18 +2,27 @@
 <html lang="en">
 
 <head>
+    <!-- The character encoding for the HTML document -->
     <meta charset="utf-8" />
+    <!-- The viewport meta tag ensures the page is rendered correctly on different devices -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- The base URL for relative URLs in the document -->
     <base href="/" />
+    <!-- Link to the Bootstrap CSS file for styling -->
     <link rel="stylesheet" href="bootstrap/bootstrap.min.css" />
+    <!-- Link to the main application CSS file -->
     <link rel="stylesheet" href="app.css" />
+    <!-- Link to the WorkoutTracker specific styles -->
     <link rel="stylesheet" href="WorkoutTracker.styles.css" />
+    <!-- Link to the favicon for the website -->
     <link rel="icon" type="image/png" href="favicon.png" />
     <HeadOutlet />
 </head>
 
 <body>
+    <!-- IMPORTANT - The Routes aka  -->
     <Routes />
+    <!-- Script to load the Blazor framework -->
     <script src="_framework/blazor.web.js"></script>
 </body>
 
