Added NewWorkout.razor, removed Counter.razor

--- a/WorkoutTracker/WorkoutTracker/WorkoutTracker/Components/Pages/NewWorkout.razor
+++ b/WorkoutTracker/WorkoutTracker/WorkoutTracker/Components/Pages/NewWorkout.razor
@@ -1,9 +1,9 @@
-﻿@page "/counter"
+﻿@page "/new_workout"
 @rendermode InteractiveServer
 
-<PageTitle>Counter</PageTitle>
+<PageTitle>NewWorkout</PageTitle>
 
-<h1>Counter</h1>
+<h1>NewWorkout</h1>
 
 <p role="status">Current count: @currentCount</p>
 
