Created Database to allow for multiple user accounts

--- a/WorkoutTracker/WorkoutTracker/WorkoutTracker/Components/Authentication/LogoutButton.razor
+++ b/WorkoutTracker/WorkoutTracker/WorkoutTracker/Components/Authentication/LogoutButton.razor
@@ -3,7 +3,7 @@
 @* Required to make button actually run code when clicked *@
 @rendermode InteractiveServer
 
-<button class="btn btn-primary" @onclick="Logout">Logout</button>
+<button class="logout-button" @onclick="Logout">Logout</button>
 
 @code {
     /// <summary>
