--- a/WorkoutTracker/WorkoutTracker/WorkoutTracker/Components/Layout/NavMenu.razor
+++ b/WorkoutTracker/WorkoutTracker/WorkoutTracker/Components/Layout/NavMenu.razor
@@ -1,4 +1,7 @@
-﻿<div class="top-row ps-3 navbar navbar-dark">
+﻿@using WorkoutTracker.Components.Authentication
+@inject NavigationManager Navigation
+
+<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
         <a class="navbar-brand" href="">WorkoutTracker</a>
     </div>
@@ -8,6 +11,13 @@
 
 <div class="nav-scrollable" onclick="document.querySelector('.navbar-toggler').click()">
     <nav class="flex-column">
+        <!-- Only show if user is not on the login page-->
+        @if (!Navigation.Uri.Contains("login"))
+        {
+            <!-- Logout button to trigger user logout -->
+            <LogoutButton />
+        }
+
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
                 <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
