--- a/WorkoutTracker/WorkoutTracker/WorkoutTracker/Components/Pages/NewWorkout.razor
+++ b/WorkoutTracker/WorkoutTracker/WorkoutTracker/Components/Pages/NewWorkout.razor
@@ -1,4 +1,5 @@
 ﻿@page "/new_workout"
+@using WorkoutTracker.Components.Exercises
 @rendermode InteractiveServer
 
 <PageTitle>NewWorkout</PageTitle>
@@ -7,10 +8,17 @@
 
 <p role="status">Current count: @currentCount</p>
 
+<DivExercise exerciseName="@exerciseName" />
+
+
 <button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
+
+
+
 
 @code {
     private int currentCount = 0;
+    private string exerciseName = "Test";
 
     private void IncrementCount()
     {
